--- a/index.html
+++ b/index.html
@@ -38,11 +38,9 @@
     
     <div class="white">
         <img class="logo" src="./assets/Logo_HDM.svg" alt="HDM Logo">
-
         <div class="dashboard-container nav nav-right-footer justify-content-end">
             <div class="dashboard">
                 <div class="row justify-content-md-center">
-
                     <div class="col-lg">
 
                         <script type='text/javascript' src='https://eu-west-1a.online.tableau.com/javascripts/api/viz_v1.js'></script>
@@ -57,7 +55,6 @@
                             </object></div>
 
                     </div>
-
                     <div class="col-lg">
 
                         <script type='text/javascript' src='https://eu-west-1a.online.tableau.com/javascripts/api/viz_v1.js'></script>
@@ -72,13 +69,41 @@
                             </object></div>
 
                     </div>
-
-
                 </div>
+         <div class="row justify-content-md-center">
+                    <div class="col-lg">
 
+                        <script type='text/javascript' src='https://eu-west-1a.online.tableau.com/javascripts/api/viz_v1.js'></script>
+                        <div class='tableauPlaceholder' style='width: 100%; height: 533px;'><object class='tableauViz' width='100%' height='533' style='display:none;'>
+                                <param name='host_url' value='https%3A%2F%2Feu-west-1a.online.tableau.com%2F' />
+                                <param name='embed_code_version' value='3' />
+                                <param name='site_root' value='&#47;t&#47;hfarmdata' />
+                                <param name='name' value='PipelineHDM2021Prova2&#47;Dashboard3' />
+                                <param name='tabs' value='no' />
+                                <param name='toolbar' value='yes' />
+                                <param name='showAppBanner' value='false' />
+                            </object></div>
+
+                    </div>
+                    <div class="col-lg">
+
+                        <script type='text/javascript' src='https://eu-west-1a.online.tableau.com/javascripts/api/viz_v1.js'></script>
+                        <div class='tableauPlaceholder' style='width: 100%; height: 533px; font-family: '><object class='tableauViz' width='100%' height='533' style='display:none;'>
+                                <param name='host_url' value='https%3A%2F%2Feu-west-1a.online.tableau.com%2F' />
+                                <param name='embed_code_version' value='3' />
+                                <param name='site_root' value='&#47;t&#47;hfarmdata' />
+                                <param name='name' value='PipelineHDM2021Prova2&#47;Dashboard4' />
+                                <param name='tabs' value='no' />
+                                <param name='toolbar' value='yes' />
+                                <param name='showAppBanner' value='false' />
+                            </object></div>
+
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+    
 
     <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
