--- a/vaccinazioni-per-regione.html
+++ b/vaccinazioni-per-regione.html
@@ -48,39 +48,39 @@
                 <h2>• SELEZIONA L'ARGOMENTO CHE VUOI APPROFONDIRE:</h2>
                 <br>
 
-                <a class="bottone-on" href="./index.html">
-                    <h3>Quanti vaccini vengono fatti al giorno?</h3><img class="freccie-bottoni" src="./assets/freccia-up.svg" alt="Freccia Down">
+                <a class="bottone-off bottone-1" href="./index.html">
+                    <h3>Quanti vaccini vengono fatti al giorno?</h3><svg class="freccie-bottoni" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 3.16 1.83" style="enable-background:new 0 0 3.16 1.83;"
+                        xml:space="preserve">
+                    <g>
+                        <polygon class="st0 st1" points="0.25,0 1.59,1.34 2.91,0.01 3.16,0.26 1.59,1.83 0,0.25 	"/>
+                    </g>
+                    </svg>
+                </a>
+
+                <a class="bottone-off bottone-2" href="./categorie-vaccinate.html">
+                    <h3>Quali categorie di persone sono già state vaccinate?</h3><svg class="freccie-bottoni" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 3.16 1.83" style="enable-background:new 0 0 3.16 1.83;"
+                        xml:space="preserve">
+                    <g>
+                        <polygon class="st0 st2" points="0.25,0 1.59,1.34 2.91,0.01 3.16,0.26 1.59,1.83 0,0.25 	"/>
+                    </g>
+                    </svg>
+                </a>
+
+                <a class="bottone-on" href="./vaccinazioni-per-regione.html">
+                    <h3>Quante persone sono state vaccinate in ogni regione?</h3><img class="freccie-bottoni" src="./assets/freccia-up.svg" alt="Freccia Down">
                 </a>
                 <div class="panel">
                     <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
                 </div>
 
-                <a class="bottone-off bottone-2" href="./categorie-vaccinate.html">
-                    <h3>Quali categorie di persone sono già state vaccinate?</h3><svg class="freccie-bottoni" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 3.16 1.83" style="enable-background:new 0 0 3.16 1.83;"
-                        xml:space="preserve">
-                        <g>
-                            <polygon class="st0 st2" points="0.25,0 1.59,1.34 2.91,0.01 3.16,0.26 1.59,1.83 0,0.25 	"/>
-                        </g>
-                        </svg>
-                </a>
-
-                <a class="bottone-off bottone-3" href="./vaccinazioni-per-regione.html">
-                    <h3>Quante persone sono state vaccinate in ogni regione?</h3><svg class="freccie-bottoni" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 3.16 1.83" style="enable-background:new 0 0 3.16 1.83;"
-                        xml:space="preserve">
-                        <g>
-                            <polygon class="st0 st3" points="0.25,0 1.59,1.34 2.91,0.01 3.16,0.26 1.59,1.83 0,0.25 	"/>
-                        </g>
-                        </svg>
-                </a>
-
                 <a class="bottone-off bottone-4" href="./fornitori-vaccini.html">
-                    <h3>Quali sono i fornitori di vaccini?</h3>
-                    <svg class="freccie-bottoni" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 3.16 1.83" style="enable-background:new 0 0 3.16 1.83;" xml:space="preserve">
-               <g>
-                   <polygon class="st0 st4" points="0.25,0 1.59,1.34 2.91,0.01 3.16,0.26 1.59,1.83 0,0.25 	"/>
-               </g>
-               </svg>
+                    <h3>Quali sono i fornitori di vaccini?</h3><svg class="freccie-bottoni" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 3.16 1.83" style="enable-background:new 0 0 3.16 1.83;"
+                        xml:space="preserve">
+                    <g>
+                        <polygon class="st0 st4" points="0.25,0 1.59,1.34 2.91,0.01 3.16,0.26 1.59,1.83 0,0.25 	"/>
+                    </g>
+                    </svg>
                 </a>
 
                 <div class="legenda">
@@ -98,31 +98,34 @@
 
             <div class="col- dashboard">
                 <div class="d-flex justify-content-between">
-                    <a href="./fornitori-vaccini.html"><img class="freccie sx" src="./assets/freccia-sx.svg" alt="Freccia Sinistra"></a>
-                    <a href="./categorie-vaccinate.html"><img class="freccie dx" src="./assets/freccia-dx.svg" alt="Freccia Destra"></a>
+                    <a href="./categorie-vaccinate.html"><img class="freccie sx" src="./assets/freccia-sx.svg" alt="Freccia Sinistra"></a>
+                    <a href="./fornitori-vaccini.html"><img class="freccie dx" src="./assets/freccia-dx.svg" alt="Freccia Destra"></a>
                 </div>
-                <div class='tableauPlaceholder' id='viz1615218454077' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16151974072070&#47;DosiGiornaliere&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Vaccini_16151974072070&#47;DosiGiornaliere' /><param name='tabs' value='no' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16151974072070&#47;DosiGiornaliere&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='no' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='it' /></object></div>
+
+                <div class='tableauPlaceholder' id='viz1615221191278' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16151974072070&#47;Regioni&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Vaccini_16151974072070&#47;Regioni' /><param name='tabs' value='no' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16151974072070&#47;Regioni&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='it' /></object></div>
                 <script type='text/javascript'>
-                    var divElement = document.getElementById('viz1615218454077');
+                    var divElement = document.getElementById('viz1615221191278');
                     var vizElement = divElement.getElementsByTagName('object')[0];
                     if (divElement.offsetWidth > 800) {
                         vizElement.style.width = '100%';
                         vizElement.style.height = '100%';
                     } else if (divElement.offsetWidth > 500) {
                         vizElement.style.width = '100%';
-                        vizElement.style.height = '100%';;
+                        vizElement.style.height = '100%';
                     } else {
                         vizElement.style.width = '100%';
                         vizElement.style.minHeight = '3650px';
-                        vizElement.style.maxHeight = '100%';;
+                        vizElement.style.maxHeight = '100%';
                     }
                     var scriptElement = document.createElement('script');
                     scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
                     vizElement.parentNode.insertBefore(scriptElement, vizElement);
                 </script>
+
             </div>
         </div>
     </div>
+
 
     <!-- Optional JavaScript -->
     <script type="text/javascript" src="./js/main.js"></script>
