--- a/fornitori-vaccini.html
+++ b/fornitori-vaccini.html
@@ -39,8 +39,8 @@
         <div class="row no-gutters">
             <div class="col- navigazione">
                 <div class="logo">
-                    <h1>Vaccini Covid-19</h1>
-                    <h2>&nbsp;REAL TIME</h2>
+                    <h1>Vaccini Covid-19&nbsp;</h1>
+                    <h2>REAL TIME</h2>
                 </div>
                 <h3><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
@@ -49,8 +49,9 @@
                 <br>
 
                 <a class="bottone-off bottone-1" href="./index.html">
-                    <h3>Quanti vaccini vengono fatti al giorno?</h3><svg class="freccie-bottoni" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 3.16 1.83" style="enable-background:new 0 0 3.16 1.83;"
-                        xml:space="preserve">
+                    <div class="testo-bottoni">
+                        <h3>Quanti vaccini vengono fatti al giorno?</h3>
+                    </div><svg class="freccie-bottoni" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 3.16 1.83" style="enable-background:new 0 0 3.16 1.83;" xml:space="preserve">
                     <g>
                         <polygon class="st0 st1" points="0.25,0 1.59,1.34 2.91,0.01 3.16,0.26 1.59,1.83 0,0.25 	"/>
                     </g>
@@ -58,8 +59,9 @@
                 </a>
 
                 <a class="bottone-off bottone-2" href="./categorie-vaccinate.html">
-                    <h3>Quali categorie di persone sono già state vaccinate?</h3><svg class="freccie-bottoni" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 3.16 1.83" style="enable-background:new 0 0 3.16 1.83;"
-                        xml:space="preserve">
+                    <div class="testo-bottoni">
+                        <h3>Quali categorie di persone sono già state vaccinate?</h3>
+                    </div><svg class="freccie-bottoni" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 3.16 1.83" style="enable-background:new 0 0 3.16 1.83;" xml:space="preserve">
                     <g>
                         <polygon class="st0 st2" points="0.25,0 1.59,1.34 2.91,0.01 3.16,0.26 1.59,1.83 0,0.25 	"/>
                     </g>
@@ -67,8 +69,9 @@
                 </a>
 
                 <a class="bottone-off bottone-3" href="./vaccinazioni-per-regione.html">
-                    <h3>Quante persone sono state vaccinate in ogni regione?</h3><svg class="freccie-bottoni" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 3.16 1.83" style="enable-background:new 0 0 3.16 1.83;"
-                        xml:space="preserve">
+                    <div class="testo-bottoni">
+                        <h3>Quante persone sono state vaccinate in ogni regione?</h3>
+                    </div><svg class="freccie-bottoni" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 3.16 1.83" style="enable-background:new 0 0 3.16 1.83;" xml:space="preserve">
                     <g>
                         <polygon class="st0 st3" points="0.25,0 1.59,1.34 2.91,0.01 3.16,0.26 1.59,1.83 0,0.25 	"/>
                     </g>
@@ -76,7 +79,9 @@
                 </a>
 
                 <a class="bottone-on" href="./fornitori-vaccini.html">
-                    <h3>Quali sono i fornitori di vaccini?</h3><img class="freccie-bottoni" src="./assets/freccia-up.svg" alt="Freccia Down">
+                    <div class="testo-bottoni">
+                        <h3>Quali sono i fornitori di vaccini?</h3>
+                    </div><img class="freccie-bottoni" src="./assets/freccia-up.svg" alt="Freccia Down">
                 </a>
                 <div class="panel">
                     <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -89,7 +94,7 @@
                         <span style="color:#FFFDF5; background-color:#8B9BBF; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">SECONDA</span> dose di vaccino.</h3>
                 </div>
 
-                <div class="logo-hdm">
+                <div class="logo-hdm logo-hdm-desk">
                     <img src="./assets/Logo_HDM.svg" alt="Logo">
                 </div>
             </div>
@@ -108,19 +113,23 @@
                     var vizElement = divElement.getElementsByTagName('object')[0];
                     if (divElement.offsetWidth > 800) {
                         vizElement.style.width = '100%';
-                        vizElement.style.height = '99%';
+                        vizElement.style.height = '100%';
                     } else if (divElement.offsetWidth > 500) {
                         vizElement.style.width = '100%';
-                        vizElement.style.height = '99%';
+                        vizElement.style.height = '100%';
                     } else {
                         vizElement.style.width = '100%';
-                        vizElement.style.minHeight = '3650px';
-                        vizElement.style.maxHeight = '99%';
+                        vizElement.style.minHeight = '1790px';
+                        vizElement.style.maxHeight = (divElement.offsetWidth * 1.77) + 'px';
                     }
                     var scriptElement = document.createElement('script');
                     scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
                     vizElement.parentNode.insertBefore(scriptElement, vizElement);
                 </script>
+
+                <div class="logo-hdm logo-hdm-mobile">
+                    <img src="./assets/Logo_HDM.svg" alt="Logo">
+                </div>
 
             </div>
         </div>
