--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a class="bottone-on" href="./index.html">
                     <div class="testo-bottoni">
                         <h3>Quanti vaccini vengono fatti al giorno?</h3>
-                    </div><img class="freccie-bottoni" src="./assets/freccia-up.svg" alt="Freccia Down">
+                    </div>
                 </a>
                 <div class="panel">
                     <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -61,31 +61,19 @@
                 <a class="bottone-off bottone-2" href="./categorie-vaccinate.html">
                     <div class="testo-bottoni">
                         <h3>Quali categorie di persone sono già state vaccinate?</h3>
-                    </div><svg class="freccie-bottoni" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 3.16 1.83" style="enable-background:new 0 0 3.16 1.83;" xml:space="preserve">
-                        <g>
-                            <polygon class="st0 st2" points="0.25,0 1.59,1.34 2.91,0.01 3.16,0.26 1.59,1.83 0,0.25 	"/>
-                        </g>
-                        </svg>
+                    </div>
                 </a>
 
                 <a class="bottone-off bottone-3" href="./vaccinazioni-per-regione.html">
                     <div class="testo-bottoni">
                         <h3>Quante persone sono state vaccinate in ogni regione?</h3>
-                    </div><svg class="freccie-bottoni" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 3.16 1.83" style="enable-background:new 0 0 3.16 1.83;" xml:space="preserve">
-                        <g>
-                            <polygon class="st0 st3" points="0.25,0 1.59,1.34 2.91,0.01 3.16,0.26 1.59,1.83 0,0.25 	"/>
-                        </g>
-                        </svg>
+                    </div>
                 </a>
 
                 <a class="bottone-off bottone-4" href="./fornitori-vaccini.html">
                     <div class="testo-bottoni">
                         <h3>Quali sono i fornitori di vaccini?</h3>
-                    </div><svg class="freccie-bottoni" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 3.16 1.83" style="enable-background:new 0 0 3.16 1.83;" xml:space="preserve">
-               <g>
-                   <polygon class="st0 st4" points="0.25,0 1.59,1.34 2.91,0.01 3.16,0.26 1.59,1.83 0,0.25 	"/>
-               </g>
-               </svg>
+                    </div>
                 </a>
 
                 <div class="legenda">
