--- a/fornitori-vaccini.html
+++ b/fornitori-vaccini.html
@@ -51,37 +51,25 @@
                 <a class="bottone-off bottone-1" href="./index.html">
                     <div class="testo-bottoni">
                         <h3>Quanti vaccini vengono fatti al giorno?</h3>
-                    </div><svg class="freccie-bottoni" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 3.16 1.83" style="enable-background:new 0 0 3.16 1.83;" xml:space="preserve">
-                    <g>
-                        <polygon class="st0 st1" points="0.25,0 1.59,1.34 2.91,0.01 3.16,0.26 1.59,1.83 0,0.25 	"/>
-                    </g>
-                    </svg>
+                    </div>
                 </a>
 
                 <a class="bottone-off bottone-2" href="./categorie-vaccinate.html">
                     <div class="testo-bottoni">
                         <h3>Quali categorie di persone sono già state vaccinate?</h3>
-                    </div><svg class="freccie-bottoni" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 3.16 1.83" style="enable-background:new 0 0 3.16 1.83;" xml:space="preserve">
-                    <g>
-                        <polygon class="st0 st2" points="0.25,0 1.59,1.34 2.91,0.01 3.16,0.26 1.59,1.83 0,0.25 	"/>
-                    </g>
-                    </svg>
+                    </div>
                 </a>
 
                 <a class="bottone-off bottone-3" href="./vaccinazioni-per-regione.html">
                     <div class="testo-bottoni">
                         <h3>Quante persone sono state vaccinate in ogni regione?</h3>
-                    </div><svg class="freccie-bottoni" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 3.16 1.83" style="enable-background:new 0 0 3.16 1.83;" xml:space="preserve">
-                    <g>
-                        <polygon class="st0 st3" points="0.25,0 1.59,1.34 2.91,0.01 3.16,0.26 1.59,1.83 0,0.25 	"/>
-                    </g>
-                    </svg>
+                    </div>
                 </a>
 
                 <a class="bottone-on" href="./fornitori-vaccini.html">
                     <div class="testo-bottoni">
                         <h3>Quali sono i fornitori di vaccini?</h3>
-                    </div><img class="freccie-bottoni" src="./assets/freccia-up.svg" alt="Freccia Down">
+                    </div>
                 </a>
                 <div class="panel">
                     <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -89,9 +77,9 @@
                 </div>
 
                 <div class="legenda">
-                    <h3>Il colore in ogni visualizzazione indica la somministazione della
-                        <span style="color:#FFFDF5; background-color:#F8A984; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">PRIMA</span> o della
-                        <span style="color:#FFFDF5; background-color:#8B9BBF; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">SECONDA</span> dose di vaccino.</h3>
+                    <h3>Il colore indica i fornitori di vaccini;
+                        <span style="color:#FFFDF5; background-color:#BE4C6E; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">PFIZER/BIONTECH</span>,
+                        <span style="color:#FFFDF5; background-color:#F47D70; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">ASTRAZENECA</span> e <span style="color:#FFFDF5; background-color:#A59ED9; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">MODERNA</span></h3>
                 </div>
 
                 <div class="logo-hdm logo-hdm-desk">
