--- a/categorie-vaccinate.html
+++ b/categorie-vaccinate.html
@@ -42,49 +42,45 @@
                     <h1>Vaccini Covid-19&nbsp;</h1>
                     <h2>REAL TIME</h2>
                 </div>
-                <h3><br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
-                <br>
-                <h2>• SELEZIONA L'ARGOMENTO CHE VUOI APPROFONDIRE:</h2>
-                <br>
+                <h3><br> Questa dashboard mostra l’andamento della campagna vaccinale in Italia, monitorando le vaccinazioni giornaliere, le categorie interessate, l’andamento a livello regionale e la tipologia di vaccini somministrati.<br>
+                    <br><a class="fonti" href="https://github.com/italia/covid19-opendata-vaccini" target="blank">Consulta le fonti ufficiali →</a><br><br><br>
+                    <h2>• SELEZIONA L'ARGOMENTO CHE VUOI APPROFONDIRE:</h2>
+                    <br>
 
-                <a class="bottone-off bottone-1" href="./index.html">
-                    <div class="testo-bottoni">
-                        <h3>Quanti vaccini vengono fatti al giorno?</h3>
+                    <a class="bottone-off bottone-1" href="./index.html">
+                        <div class="testo-bottoni">
+                            <h3>Quanti vaccini vengono fatti al giorno?</h3>
+                        </div>
+                    </a>
+
+                    <a class="bottone-on" href="./categorie-vaccinate.html">
+                        <div class="testo-bottoni">
+                            <h3>Quali categorie di persone sono già state vaccinate?</h3>
+                        </div>
+                    </a>
+                    <div class="panel">
+                        <h3>La rappresentazioni mostrano i volumi di somministrazioni (prima e seconda dose) per sesso, fascia d’età e categorie, come previsto dal Piano vaccinazione anti Covid-19. </div>
+
+                    <a class="bottone-off bottone-3" href="./vaccinazioni-per-regione.html">
+                        <div class="testo-bottoni">
+                            <h3>Quante persone sono state vaccinate in ogni regione?</h3>
+                        </div>
+                    </a>
+
+                    <a class="bottone-off bottone-4" href="./fornitori-vaccini.html">
+                        <div class="testo-bottoni">
+                            <h3>Quali sono i fornitori di vaccini?</h3>
+                        </div>
+                    </a>
+
+                    <div class="legenda">
+                        Il colore indica il totale dei vaccini somministrati a
+                        <span style="color:#FFFDF5; background-color:#EF9997; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">DONNE</span> e <span style="color:#FFFDF5; background-color:#626c8f; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">UOMINI</span>
                     </div>
-                </a>
 
-                <a class="bottone-on" href="./categorie-vaccinate.html">
-                    <div class="testo-bottoni">
-                        <h3>Quali categorie di persone sono già state vaccinate?</h3>
+                    <div class="logo-hdm logo-hdm-desk">
+                        <img src="./assets/Logo_HDM.svg" alt="Logo">
                     </div>
-                </a>
-                <div class="panel">
-                    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
-                </div>
-
-                <a class="bottone-off bottone-3" href="./vaccinazioni-per-regione.html">
-                    <div class="testo-bottoni">
-                        <h3>Quante persone sono state vaccinate in ogni regione?</h3>
-                    </div>
-                </a>
-
-                <a class="bottone-off bottone-4" href="./fornitori-vaccini.html">
-                    <div class="testo-bottoni">
-                        <h3>Quali sono i fornitori di vaccini?</h3>
-                    </div>
-                </a>
-
-                <div class="legenda">
-                    Il colore indica le
-                    <span style="color:#FFFDF5; background-color:#989897; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">CATEGORIE</span> vaccinate e la loro divisione per sesso
-                    <span style="color:#FFFDF5; background-color:#EF9997; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">FEMMINILE</span> o <span style="color:#FFFDF5; background-color:#626c8f; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">MASCHILE</span>
-                </div>
-
-                <div class="logo-hdm logo-hdm-desk">
-                    <img src="./assets/Logo_HDM.svg" alt="Logo">
-                </div>
             </div>
 
 
