--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <h1>Vaccini Covid-19&nbsp;</h1>
                     <h2>REAL TIME</h2>
                 </div>
-                <h3><br> Questa dashboard mostra l’andamento della campagna vaccinale in Italia, concentrandosi sulle vaccinazioni giornaliere, le categorie interessate, l’andamento a livello regionale e la tipologia di vaccini somministrati.<br>
+                <h3><br> Questa dashboard mostra l’andamento della campagna vaccinale in Italia, monitorando le vaccinazioni giornaliere, le categorie interessate, l’andamento a livello regionale e la tipologia di vaccini somministrati.<br>
                     <br><a class="fonti" href="https://github.com/italia/covid19-opendata-vaccini" target="blank">Consulta le fonti ufficiali →</a><br><br><br>
                     <h2>• SELEZIONA L'ARGOMENTO CHE VUOI APPROFONDIRE:</h2>
                     <br>
@@ -53,7 +53,8 @@
                         </div>
                     </a>
                     <div class="panel">
-                        <h3>In questa scheda viene mostrato il numero di vaccini somministrati giornalmente, distinguendo tra prima e seconda dose.</h3>
+                        <h3>In questa scheda è possibile approfondire l'andamento delle somministrazioni giornaliere della prima e della seconda dose di vaccino e il tempo necessario al raggiungimento dell'immunità di greggie (70% della popolazione italiana:
+                            42,25 Milioni). Il tempo stimato è calcolato sulla base della media mobile delle somministrazioni effettuate negli ultimi 7 giorni.</h3>
                     </div>
 
                     <a class="bottone-off bottone-2" href="./categorie-vaccinate.html">
@@ -88,10 +89,7 @@
 
 
             <div class="col- dashboard">
-                <div class="d-flex justify-content-between">
-                    <a href="./fornitori-vaccini.html"><img class="freccie sx" src="./assets/freccia-sx.svg" alt="Freccia Sinistra"></a>
-                    <a href="./categorie-vaccinate.html"><img class="freccie dx" src="./assets/freccia-dx.svg" alt="Freccia Destra"></a>
-                </div>
+
                 <div class='tableauPlaceholder' id='viz1615218454077' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16151974072070&#47;DosiGiornaliere&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Vaccini_16151974072070&#47;DosiGiornaliere' /><param name='tabs' value='no' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16151974072070&#47;DosiGiornaliere&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='no' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='it' /></object></div>
                 <script type='text/javascript'>
                     var divElement = document.getElementById('viz1615218454077');
