--- a/categorie-vaccinate.html
+++ b/categorie-vaccinate.html
@@ -59,7 +59,7 @@
                         </div>
                     </a>
                     <div class="panel">
-                        <h3>La rappresentazioni mostrano i volumi di somministrazioni (prima e seconda dose) per sesso, fascia d’età e categorie, come previsto dal Piano vaccinazione anti Covid-19. </div>
+                        <h3>La rappresentazioni mostrano i volumi di somministrazione (prima e seconda dose) per sesso, fascia d’età e categorie, come previsto dal Piano vaccinazione anti Covid-19. </div>
 
                     <a class="bottone-off bottone-3" href="./vaccinazioni-per-regione.html">
                         <div class="testo-bottoni">
@@ -86,10 +86,6 @@
 
 
             <div class="col- dashboard">
-                <div class="d-flex justify-content-between">
-                    <a href="./index.html"><img class="freccie sx" src="./assets/freccia-sx.svg" alt="Freccia Sinistra"></a>
-                    <a href="./vaccinazioni-per-regione.html"><img class="freccie dx" src="./assets/freccia-dx.svg" alt="Freccia Destra"></a>
-                </div>
 
                 <div class='tableauPlaceholder' id='viz1615220842348' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16151974072070&#47;Categorie&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Vaccini_16151974072070&#47;Categorie' /><param name='tabs' value='no' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16151974072070&#47;Categorie&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='it' /></object></div>
                 <script type='text/javascript'>
