--- a/fornitori-vaccini.html
+++ b/fornitori-vaccini.html
@@ -71,9 +71,7 @@
                         </div>
                     </a>
                     <div class="panel">
-                        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
-                    </div>
+                        <h3>Riepilogo delle dosi consegnate e somministrate per ogni fornitore.</div>
 
                     <div class="legenda">
                         <h3>Il colore indica i diversi fornitori di vaccini:
@@ -89,11 +87,6 @@
 
 
             <div class="col- dashboard">
-                <div class="d-flex justify-content-between">
-                    <a href="./vaccinazioni-per-regione.html"><img class="freccie sx" src="./assets/freccia-sx.svg" alt="Freccia Sinistra"></a>
-                    <a href="./index.html"><img class="freccie dx" src="./assets/freccia-dx.svg" alt="Freccia Destra"></a>
-                </div>
-
                 <div class='tableauPlaceholder' id='viz1615221012025' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16151974072070&#47;Fornitori&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Vaccini_16151974072070&#47;Fornitori' /><param name='tabs' value='no' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16151974072070&#47;Fornitori&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='it' /></object></div>
                 <script type='text/javascript'>
                     var divElement = document.getElementById('viz1615221012025');
