--- a/index.html
+++ b/index.html
@@ -81,8 +81,13 @@
                         <span style="color:#FFFDF5; background-color:#8B9BBF; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">SECONDA</span> dose di vaccino.
                     </div>
 
-                    <div class="logo-hdm logo-hdm-desk">
-                        <img src="./assets/Logo_HDM.svg" alt="Logo">
+                    <div class="credits-desk">
+                        <div class="logo-hdm logo-hdm-desk">
+                            <img src="./assets/Logo_HDM.svg" alt="Logo">
+                        </div>
+
+                        <h3><span style="font-weight: bold;">Data Scientists:</span> Giuseppe Iovino, Nicolò Marana<br>
+                            <span style="font-weight: bold;">DataViz Designers:</span> Annalaura Cannavò, Alessia Musio</h3>
                     </div>
             </div>
 
@@ -94,12 +99,12 @@
                 <script type='text/javascript'>
                     var divElement = document.getElementById('viz1615218454077');
                     var vizElement = divElement.getElementsByTagName('object')[0];
-                    if (divElement.offsetWidth > 800) {
+                    if (divElement.offsetWidth > 1000) {
                         vizElement.style.width = '100%';
-                        vizElement.style.height = '100%';
+                        vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
                     } else if (divElement.offsetWidth > 500) {
                         vizElement.style.width = '100%';
-                        vizElement.style.height = '100%';;
+                        vizElement.style.height = (divElement.offsetWidth * 0.95) + 'px';
                     } else {
                         vizElement.style.width = '100%';
                         vizElement.style.minHeight = '1590px';
@@ -110,9 +115,15 @@
                     vizElement.parentNode.insertBefore(scriptElement, vizElement);
                 </script>
 
-                <div class="logo-hdm logo-hdm-mobile">
-                    <img src="./assets/Logo_HDM.svg" alt="Logo">
+                <div class="credits-mobile">
+                    <div class="logo-hdm logo-hdm-mobile">
+                        <img src="./assets/Logo_HDM.svg" alt="Logo">
+                    </div>
+
+                    <h3><span style="font-weight: bold;">Data Scientists:</span> Giuseppe Iovino, Nicolò Marana<br>
+                        <span style="font-weight: bold;">DataViz Designers:</span> Annalaura Cannavò, Alessia Musio</h3>
                 </div>
+
             </div>
         </div>
     </div>
