--- a/fornitori-vaccini.html
+++ b/fornitori-vaccini.html
@@ -74,9 +74,10 @@
                         <h3>Riepilogo delle dosi consegnate e somministrate per ogni fornitore.</div>
 
                     <div class="legenda">
-                        <h3>Il colore indica i diversi fornitori di vaccini:
-                            <span style="color:#FFFDF5; background-color:#BE4C6E; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">PFIZER/BIONTECH</span>,
-                            <span style="color:#FFFDF5; background-color:#F47D70; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">ASTRAZENECA</span> e <span style="color:#FFFDF5; background-color:#A59ED9; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">MODERNA</span></h3>
+                        <h2>• LEGENDA:</h2>
+                        Il colore indica i diversi fornitori di vaccini:
+                        <span style="color:#FFFDF5; background-color:#BE4C6E; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">PFIZER/BIONTECH</span>,
+                        <span style="color:#FFFDF5; background-color:#F47D70; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">ASTRAZENECA</span> e <span style="color:#FFFDF5; background-color:#A59ED9; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">MODERNA</span>
                     </div>
 
                     <div class="credits-desk">
