--- a/vaccinazioni-per-regione.html
+++ b/vaccinazioni-per-regione.html
@@ -77,7 +77,7 @@
                     </a>
 
                     <div class="legenda">
-                        Il colore indica la somministazione della
+                        <h2>• LEGENDA:</h2> Il colore indica la somministazione della
                         <span style="color:#FFFDF5; background-color:#F8A984; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">PRIMA</span> e della
                         <span style="color:#FFFDF5; background-color:#8B9BBF; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">SECONDA</span> dose di vaccino.
                     </div>
